# saturn-mousehunter-strategy-engine

./: .env  Dockerfile  README.md  STRATEGY_ENGINE_API_DOCS.md  pyproject.toml  test_complete_strategy_api.sh  test_strategy_api.sh  test_strategy_server.py
alembic/versions/: 001_create_strategy_tables.sql
db/migrations/: 001_strategy_tables.sql
docs/: FRONTEND_DEVELOPMENT_GUIDE.md  README.md
docs/api/: openapi.json  strategy-backtests.json  strategy-definitions.json  strategy-signals.json  system.json
src/: main.py
src/api/: __init__.py
src/api/dependencies/: __init__.py  auth.py  services.py
src/api/middleware/: auth.py
src/api/routes/: __init__.py  strategy_backtests.py  strategy_definition.py  strategy_signals.py
src/application/: __init__.py
src/application/services/: __init__.py  strategy_definition_service.py  trading_signal_service.py
src/domain/models/: __init__.py  backtest.py  signal_queue_config.py  strategy_definition.py  strategy_instance.py  strategy_pool.py  strategy_version.py  trading_signal.py
src/infrastructure/config/: app_config.py
src/infrastructure/db/: base_dao.py
src/infrastructure/repositories/: __init__.py  strategy_backtest_repo.py  strategy_definition_repo.py  strategy_signal_repo.py
src/saturn_mousehunter_strategy_engine/: __init__.py
